--- a/index.html
+++ b/index.html
@@ -58,6 +58,6 @@
 
     <!-- Verify that all dependencies are loaded. -->
     <script src="dependencies.js"></script>
-
+<h1>УРА САЙТ РАБОТАЕТ<h1>
 </body>
 </html>
