--- a/index.html
+++ b/index.html
@@ -99,12 +99,12 @@
                               <div class="article__text">
                                  <div class="js-mediator-article">
 								 
-                                   <p></p><p>Кристина Черненкова очень любит Карецов<br>
+                                   <p></p><p>Кристина Черненкова очень любит Карекйцов<br>
 парень у нее кареец<br>
 она любит орать и скандалить<br>
 вк она есть -https://vk.com/id586524808 <br>
 детей-нет<br>
-подруга Даианна по инет еще Яна Лиза и Настя<br>
+подруга Дианна по инет еще Яна Лиза и Настя<br>
 у нее есть брат оннего всегда орет и скандалит на него</p>
 								   
                                    </div>
@@ -231,7 +231,7 @@
             section_id: 214071,
             place: "advertur_214071",
             width: 300,
-            height: 250
+            height: 450
         });
     })(window, document, "advertur_sections");
 </script>
