--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 вк она есть -https://vk.com/id586524808 <br>
 детей-нет<br>
 подруга Дианна по инет еще Яна Лиза и Настя<br>
-					 у нее есть брат оннего всегда орет и скандалит на него</p><h1>ЕЕ подруга Дианна</h1> <p>Обижает Диму тоже по вк ее страница -https://vk.com/id586296150</p>
+					 у нее есть брат она на него всегда орет и скандалит на него</p><h1>ЕЕ подруга Дианна</h1> <p>Обижает Диму тоже по вк ее страница -https://vk.com/id586296150</p>
 								   
                                    </div>
                               </div>
