--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <h1>Здраствуйте пользователь Яна спасибо что зашли на наш сайт</h1>
-<h4>Напишите что вы тут видите</h4>
+<h4>Ваш приз 0 руб</h4>
   <style> a.button12 {
   position: relative;
   display: inline-block;
@@ -49,4 +49,4 @@ a.button12:focus:after {
 }
   </style>
 
-<a href="#on" class="button12" tabindex="0"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">ЗПолучить приз 1 руб</font></font></a>
+<a href="#on" class="button12" tabindex="0"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">ЗПолучить приз 0 руб</font></font></a>
