--- a/index.html
+++ b/index.html
@@ -49,4 +49,4 @@ a.button12:focus:after {
 }
   </style>
 
-<a href="#on" class="button12" tabindex="0"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">ЗПолучить приз 0 руб</font></font></a>
+<a href="#on" class="button12" tabindex="0"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Получить приз 0 руб</font></font></a>
