--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<h1>Здраствуйте пользователь Яна спасибо что зашли на наш сайт</h1>
+<h1>Здраствуйте пользователь (я хз кто ты ХВАХВА) спасибо что зашли на наш сайт</h1>
 <h4>Ваш приз 0 руб</h4>
   <style> a.button12 {
   position: relative;
