--- a/index.html
+++ b/index.html
@@ -2,3 +2,4 @@
 
 </style>
 <h1>Я кушаю :-)</h1>
+<p>Here are some <a href="https://dima0404.github.io/ind-01.html">HTML codes</a> to play with.</p>
