--- a/index.html
+++ b/index.html
@@ -3,5 +3,5 @@
 </style>
 <h1>Я кушаю :-)</h1>
 <p>Делаю крутые сайты <a href="https://dima0404.github.io/ind-01.html"> HTML и css </a>Регистрируйтесь</p>
-<body style="background-color: #55D52B">
+<body style="background-color: #cdc5c2">
 </body>
