--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <style>
 
 </style>
-<h1>Я кушаю :-)</h1>
+<html><head><style>
+
+</style>
+</head><body style="background-color: #cdc5c2"><h1>Я кушаю :-)</h1>
 <p>Делаю крутые сайты <a href="https://dima0404.github.io/ind-01.html"> HTML и css </a>Регистрируйтесь</p>
-<body style="background-color: #cdc5c2">
-</body>
-<html><head>
+
+
+
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 body {margin:0;}
@@ -39,11 +42,11 @@ body {margin:0;}
   height: 1500px; /* Used in this example to enable scrolling */
 }
 </style>
-</head>
-<body>
+
+
 
 <div class="navbar">
-  <a href="https://sites.google.com/view/021001/">Все</a><a href="#home">Одежда</a>
+  <a href="ind-01.html">Все</a><a href="#home">Одежда</a>
   <a href="#news">Телефон</a>
 <a href="#news">Правильно</a>
 <a href="#news">О сайте</a>
@@ -54,4 +57,5 @@ body {margin:0;}
 <div class="main">
 	<h1>О сайте</h1>
 </div>
+
 </body></html>
