--- a/index.html
+++ b/index.html
@@ -1,5 +1,20 @@
 <style>
-
+table{
+width: 100%;
+border-collapse:collapse;
+border-spacing:0
+}
+table, td, th {
+border: 1px solid #595959;
+}
+td, th {
+padding: 3px;
+width: 30px;
+height: 35px;
+}
+th {
+background-color: #7accee;
+}
 </style>
 <html><head><style>
 
