--- a/index.html
+++ b/index.html
@@ -76,3 +76,12 @@ body {margin:0;}
 
 </body></html>
 <a href="#top">Наверх</a>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Администратор магазина</title>
+  </head>
+  <body>
+    <button onclick="window.location.href = 'https://w3docs.com';">Click Here</button>
+  </body>
+</html>
