--- a/index.html
+++ b/index.html
@@ -79,9 +79,8 @@ body {margin:0;}
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Администратор магазина</title>
   </head>
   <body>
-    <button onclick="window.location.href = 'https://w3docs.com';">Click Here</button>
+    <button onclick="window.location.href = 'https://vk.com/tvoyabunny';">Администратор магазина</button>
   </body>
 </html>
