--- a/index.html
+++ b/index.html
@@ -84,3 +84,4 @@ body {margin:0;}
     <button onclick="window.location.href = 'https://vk.com/tvoyabunny';">Администратор магазина</button>
   </body>
 </html>
+<html><head>    <meta charset="utf-8">    </head><body>    <form method="post" action="/login">        <table>            <tbody><tr>                <td><label for="loginField">Логин</label></td>                <td><input id="loginField" type="text" name="login" required=""></td>            </tr>            <tr>                <td><label for="passwordField">Пароль</label></td>                <td><input id="passwordField" type="password" name="password" required=""></td>            </tr>            <tr>                <td colspan="2" style="text-align: center"><input type="submit" value="Войти"></td>            </tr>        </tbody></table>    </form>    <p><a href="/register">Зарегистрироваться</a></p></body></html>
