--- a/index.html
+++ b/index.html
@@ -17,11 +17,7 @@
                 <td><label for="passwordField">Пароль</label></td>
                 <td><input id="passwordField" type="password" name="password" required=""></td>
             </tr>
-            <tr>
-                <td colspan="2" style="text-align: center"><input type="submit" value="Войти"></td>
-            </tr>
-        </tbody></table>
     </form>
-    <p><a href="/register">Зарегистрироваться</a></p>
+    <p><a href="/login.html">Войти</a></p>
 
 </body></html>
