--- a/index.html
+++ b/index.html
@@ -18,6 +18,5 @@
                 <td><input id="passwordField" type="password" name="password" required=""></td>
             </tr>
     </form>
-    <p><a href="/login.html">Войти</a></p>
-
+    <input type="button" name="nubex" value="Nubex" /login.html>
 </body></html>
