--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <tr>
                 <td><label for="passwordField">Пароль</label></td>
                 <td><input id="passwordField" type="password" name="password" required=""></td>
-		<input type="button" name="nubex" value="Nubex" /login.html>
+	        <a href="/login.html">Войти</a>
             </tr>
     </form>
 </body></html>
