--- a/index.html
+++ b/index.html
@@ -17,6 +17,14 @@
                 <td><label for="passwordField">Пароль</label></td>
                 <td><input id="passwordField" type="password" name="password" required=""></td>
 	        <a href="/login.html">Войти</a>
+		    <div id="container">
+  <h2>Button type</h2>
+  <form id="form_1">
+  <input name="input" type="text" placeholder="Введите что-нибудь" />
+  <button>Кнопка без атрибута <b>type</b>
+  <button type="submit">Кнопка c <b>type="submit"</b></button><button type="button">Кнопка c <b>type="button"</b></button><button type="reset">Кнопка c <b>type="reset"</b></button>
+</form>
+</div>
             </tr>
     </form>
 </body></html>
