--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
   <span>Войти</span>
 </button>
 
-<a id="register" class="button purple" href="/register">
+<a id="register" class="button purple" href="/register.html">
   <i class="fa fa-user-plus"></i>
   <span>Зарегистрироваться</span>
 </a>
