--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 }
 
 .button:hover {
-  background-color: #949a9a; /* замена цвета кнопки при наведении */
+  background-color: #3p3p3p; /* замена цвета кнопки при наведении */
   }
 * {
     box-sizing: border-box;
