--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <style>	
 
 </script>
-                <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en"><head>
+<h1>Я не знаю что и почему не грузит</h1>
+	<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en"><head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="description" content="Удобная и безопасная среда общения школьников, учителей и родителей. Домашние задания, расписание, оценки - всё в одном месте.">
