--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <title>Вход</title>
 <style>	
-
-</scripe>
+	
+</style>	
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en"><head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
