--- a/index.html
+++ b/index.html
@@ -2,7 +2,4 @@
 <style>	
 	
 </style>	
-<form action="" method="get">
-  <input name="s" placeholder="Искать здесь..." type="search">
-  <button type="submit">Поиск</button>
-</form>
+<h1>Спасибо что зашли на наш сайт , но пока он в разработке </h1>
