--- a/index.html
+++ b/index.html
@@ -3,3 +3,31 @@
 	
 </style>	
 <h1>Спасибо что зашли на наш сайт , но пока он в разработке </h1>
+<html>
+<head>
+        <meta http-equiv="content-type" content="charset=utf-8" />
+<script type="text/javascript" src="js/jquery.js"></script>
+<script type="text/javascript">
+$(document).ready(function(){
+    $('.button').click(function(){
+        var image=$(this).attr('image');
+        $('body').css('background-image','url('+image+')')
+    })
+});
+</script>
+<style>
+*{
+    margin:0;
+    pasing:0;
+}
+body{
+    background-image: url("1.jpg");
+}
+</style>
+</head>
+<body>
+<input type="button" class="button" image="1.jpg" value="Первый"/>
+<input type="button" class="button" image="2.jpg" value="Второй"/>
+<input type="button" class="button" image="3.jpg" value="Третий"/>
+</body>
+</html>
