--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 <style>	
 	
 </style>	
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en"><head>
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en"><head><title>Вход</title>
+<style>	
+	
+</style>	
+
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="description" content="Удобная и безопасная среда общения школьников, учителей и родителей. Домашние задания, расписание, оценки - всё в одном месте.">
@@ -17,7 +21,7 @@
 </script><script type="text/javascript" src="https://static.school.mosreg.ru/javascripts/local/ru.js">
 
 </script>
-        <script src="https://yastatic.net/pcode/adfox/loader.js" crossorigin="anonymous"></script><link rel="preload" href="https://yastatic.net/pcode-bundles/0.1607/banner_direct/banner_direct.js" as="script"><link rel="preload" href="https://an.yandex.ru/system/context.js" as="script"><link rel="preload" href="https://yastatic.net/pcode-bundles/0.1609/banner_direct/banner_direct.js" as="script"><link rel="preload" href="https://an.yandex.ru/system/context.js" as="script"><link rel="preload" href="https://yastatic.net/pcode-bundles/0.1609/banner_direct/banner_direct.js" as="script"><link rel="preload" href="https://an.yandex.ru/system/context.js" as="script"><link rel="preload" href="https://yastatic.net/pcode-bundles/0.1593/banner_direct/banner_direct.js" as="script"><link rel="preload" href="https://an.yandex.ru/system/context.js" as="script">
+        <script src="https://yastatic.net/pcode/adfox/loader.js" crossorigin="anonymous"></script><link rel="preload" href="https://yastatic.net/pcode-bundles/0.1777/banner_direct/banner_direct.js" as="script"><link rel="preload" href="https://an.yandex.ru/system/context.js" as="script"><link rel="preconnect" href="https://ads.adfox.ru"><link rel="preload" href="https://yastatic.net/pcode-bundles/0.1607/banner_direct/banner_direct.js" as="script"><link rel="preload" href="https://an.yandex.ru/system/context.js" as="script"><link rel="preload" href="https://yastatic.net/pcode-bundles/0.1609/banner_direct/banner_direct.js" as="script"><link rel="preload" href="https://an.yandex.ru/system/context.js" as="script"><link rel="preload" href="https://yastatic.net/pcode-bundles/0.1609/banner_direct/banner_direct.js" as="script"><link rel="preload" href="https://an.yandex.ru/system/context.js" as="script"><link rel="preload" href="https://yastatic.net/pcode-bundles/0.1593/banner_direct/banner_direct.js" as="script"><link rel="preload" href="https://an.yandex.ru/system/context.js" as="script">
         <script src="https://static.school.mosreg.ru/client/localization/mosreg.ru-RU.js" type="text/javascript"></script><script type="text/javascript" charset="utf-8" async="" data-requirecontext="_" data-requiremodule="main.min.fbfc4cfb" src="https://static.school.mosreg.ru/assets/scripts/modules/main.min.fbfc4cfb.js"></script>
 		<script src="https://static.school.mosreg.ru/client/react.vendor.bundle.js" type="text/javascript"></script>
 	<title>
@@ -181,7 +185,7 @@ $('#profile_logout').click(function () {
 <div><div id="calendar" class="" style=""><a href="" class="previous">&lt;</a><div class="current"><a href="">Апрель, 2020</a></div><a href="" class="next">&gt;</a><div style="height: px; overflow: hidden;"><div class="content"><div class="decade" id="decade_currentscreen" style="display: none;"><ul class="years"><li><a href=""></a></li><li><a href=""></a></li><li><a href=""></a></li><li><a href=""></a></li><li><a href=""></a></li><li><a href=""></a></li><li><a href=""></a></li><li><a href=""></a></li><li><a href=""></a></li><li><a href=""></a></li><li><a href=""></a></li><li><a href=""></a></li></ul></div><div class="year" id="year_currentscreen" style="display: none;"><ul class="months"><li><a href="" rel="1">янв</a></li><li><a href="" rel="2">фев</a></li><li><a href="" rel="3">мар</a></li><li><a href="" rel="4">апр</a></li><li><a href="" rel="5">май</a></li><li><a href="" rel="6">июн</a></li><li><a href="" rel="7">июл</a></li><li><a href="" rel="8">авг</a></li><li><a href="" rel="9">сен</a></li><li><a href="" rel="10">окт</a></li><li><a href="" rel="11">ноя</a></li><li><a href="" rel="12">дек</a></li></ul></div><div class="month" id="month_currentscreen" style="display: block; margin-top: 0px;"><ul class="week"><li>Пн</li><li>Вт</li><li>Ср</li><li>Чт</li><li>Пт</li><li class="weekend">Сб</li><li class="weekend">Вс</li></ul><ul class="days"><li><a href="" class="notnow">30</a></li><li><a href="" class="notnow">31</a></li><li><a href="" class="">1</a></li><li><a href="" class="">2</a></li><li><a href="" class="">3</a></li><li class="weekend"><a href="" class="">4</a></li><li class="weekend"><a href="" class="">5</a></li><li><a href="" class="">6</a></li><li><a href="" class="">7</a></li><li><a href="" class="">8</a></li><li><a href="" class="">9</a></li><li><a href="" class="">10</a></li><li class="weekend"><a href="" class="">11</a></li><li class="weekend"><a href="" class="">12</a></li><li><a href="" class="">13</a></li><li><a href="" class="">14</a></li><li><a href="" class="">15</a></li><li><a href="" class="">16</a></li><li><a href="" class="">17</a></li><li class="weekend"><a href="" class="">18</a></li><li class="weekend"><a href="" class="">19</a></li><li><a href="" class="">20</a></li><li><a href="" class="">21</a></li><li><a href="" class="">22</a></li><li><a href="" class="">23</a></li><li><a href="" class="">24</a></li><li class="weekend"><a href="" class="">25</a></li><li class="weekend"><a href="" class="">26</a></li><li><a href="" class="">27</a></li><li><a href="" class="">28</a></li><li><a href="" class="">29</a></li><li><a href="" class="selected">30</a></li><li><a href="" class="notnow">1</a></li><li class="weekend"><a href="" class="notnow">2</a></li><li class="weekend"><a href="" class="notnow">3</a></li><li><a href="" class="notnow">4</a></li><li><a href="" class="notnow">5</a></li><li><a href="" class="notnow">6</a></li><li><a href="" class="notnow">7</a></li><li><a href="" class="notnow">8</a></li><li class="weekend"><a href="" class="notnow">9</a></li><li class="weekend"><a href="" class="notnow">10</a></li></ul></div></div><div class="today"><a href="">Сегодня: 30 Апрель 2020 г</a></div><div class="today"><br></div></div></div></div><div>Выбери класс<ul class="iconsL">
     
     
-				<li class="iE"><a href="https://sites.google.com/view/45454154514" title="добавить свой класс"><span>добавить свой класс</span></a></li>
+				<li class="iE"><a href="https://dima0404.github.io/login.html" title="добавить свой класс"><span>добавить свой класс</span></a></li>
 </ul></div><div><br></div><div><a href="Ссылку сюда" target="_blank">6Б</a></div>
 <div><br></div><div><br></div><div><br></div><div><br></div>
 <div><br></div><div><br></div><div><br></div><div><br></div><div><br></div><div><br></div><div><br></div><div><br></div><div><br><div<div class="panel"><div class="rounded"><div class="c1"><div class="c2"></div></div><div class="cc">
@@ -230,6 +234,7 @@ $('#profile_logout').click(function () {
                 </script><script type="text/javascript" src="https://static.school.mosreg.ru/assets/scripts/modules/common/adsbygoogle.js">
 
 </script></span>
+
 
 
 
