--- a/index.html
+++ b/index.html
@@ -1,4 +1,60 @@
 <title>Вход</title>
 <style>	
-	
+.round{width:1em;height:1em;border:2px solid green;border-radius:50%;line-height:10em;text-align:center;background:#009e05}*{margin:0;padding:0}.form{width:300px;padding:32px;border-radius:10px;box-shadow:0 4px 16px #ccc;letter-spacing:1px}footer{background-color:#363636;position:absolute;left:0;bottom:0;color:#fff;width:100%;height:80px}.form_title{text-align:center;margin:0 0 32px;font-weight:400}.font_group{position:relative;margin-bottom:32px}.form_input{width:100%;padding:0 0 10px;border:none;border-bottom:1px solid #e0e0e0;background-color:transparent;outline:none;transition:.3s}.form_input:focus{border-bottom:1px solid #1a73a8}.form_input:hover{border-bottom:1px solid #1a73a8}.aHov{color:#000;transition:.3s}.aHov:hover{color:blue;transition:.3s}.form_button{padding:10px 20px;border:none;border-radius:5px;color:#fff;background-color:#00089e;outline:none;cursor:pointer;transition:.3s}.form_button:hover{font-size:20px;transition:.3s}.form_button_vk{padding:10px 20px;border:none;border-radius:5px;color:#fff;background-color:#000680;outline:none;cursor:pointer;transition:.3s}.form_button_vk:hover{font-size:20px;transition:.3s}.form_button_google{padding:10px 20px;border:none;border-radius:5px;color:#fff;background-color:#e34949;outline:none;cursor:pointer;transition:.3s}.form_button_google:hover{font-size:20px;transition:.3s}div.container4 p{margin:0;position:absolute;top:50%;left:50%;margin-right:-50%;transform:translate(-50%,-50%)}a{text-decoration:none}a.prevu{color:#fff}li{text-decoration:none;list-style:none}body{font-family:raleway,sans-serif;color:#505050;background-color:#f0f0f0}.logo{background-color:#363636;display:flex;justify-content:center}.graficloho{padding:5px;max-width:100%;box-sizing:border-box}nav{margin:auto;width:800px;height:100px}.navigate{background-color:#fff;font-size:14px;margin-top:40px}a.prevu1{color:#fff;text-align:center;padding:14px 16px;font-size:20px}a.icon{color:#000;font-size:20px}.homeQw{color:#000;text-align:center;padding:14px 16px;font-size:20px;border-bottom:2px solid #000}a.prevu1:hover{border-bottom:2px solid #fff;transition:.3s}
 </style>	
+<!DOCTYPE html>
+<html lang="ru">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Начать игру | AvaZoom</title>
+    <link rel="manifest" href="/files/site/site.webmanifest">
+    <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
+    <link href="/files/index.css" rel="stylesheet">
+  </head>
+  <body>
+    <header>
+      <br>
+      <br>
+      <br>
+      <br>
+      <center>
+        <form class="form" method="post" action="/login">
+          <h1 class="form_title">
+            Авторизация
+          </h1>
+          <div class="navigate"></div>
+          <div class="form_group">
+            <input class="form_input" placeholder="Логин: " id="loginField" type="text" name="login">
+          </div>
+          <br>
+          <br>
+          <div class="form_group">
+            <input class="form_input" placeholder="Пароль: " id="passwordField" type="password" name="password">
+          </div>
+          <br>
+          <br>
+          <br>
+          <input type="submit" value="Войти" class="form_button"><br>
+          <br>
+          <a class="aHov" href="https://vk.com/im?sel=-193672154" target="_blank">Регистрация</a>
+          </div>
+        </form>
+      </center>
+      <footer>
+        <div class="container4">
+          <center>
+            <p>
+              © AvaZoom - 2020
+            </p>
+          </center>
+        </div>
+        <div class="container5">
+          <p>
+            Текущий онлайн: 132
+          </p>
+        </div>
+      </footer>
+  </body>
+</html>
