--- a/register.html
+++ b/register.html
@@ -1,1 +1,49 @@
-
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta http-equiv="X-UA-Compatible" content="ie=edge">
+<title>Начать игру | AvaZoom</title>
+<link rel="manifest" href="/files/site/site.webmanifest">
+<link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
+<link href="/files/index.css" rel="stylesheet">
+</head>
+<body>
+<header>
+<br>
+<br>
+<br>
+<br>
+<center>
+<form class="form" method="post" action="/login">
+<h1 class="form_title">Авторизация</h1>
+<div class="navigate"></div>
+<div class="form_group">
+<input class="form_input" placeholder="Логин: " id="loginField" type="text" name="login">
+</div>
+<br>
+<br>
+<div class="form_group">
+<input class="form_input" placeholder="Пароль: " id="passwordField" type="password" name="password">
+</div>
+<br>
+<br>
+<br>
+<input type="submit" value="Войти" class="form_button"><br><br>
+<a class="aHov" href="https://vk.com/im?sel=-193672154" target="_blank">Регистрация</a>
+</div>
+</form>
+</center>
+<footer>
+<div class="container4">
+<center>
+<p>© AvaZoom - 2020</p>
+</center>
+</div>
+<div class="container5">
+<p>Текущий онлайн: 132</p>
+</div>
+</footer>
+</body>
+</html>
